# faebot-twitch

./: .coverage  .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  ROADMAP.md  bot.py  core.py  faebot-io.py  faebot.py  fly.toml  local.py  main.py  pyproject.toml  server.py
static/: audio-processor.js  dashboard.js  style.css
templates/: dashboard.html
tests/: conftest.py  test_core.py
