[tool.poetry]
name = "faebot-twitch"
version = "0.1.0"
description = "Faebot AI Chatbot for twitch"
authors = ["transfaeries"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
twitchio = "^2.8.2"


[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
black = "^23.12.1"
ipython = "^8.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
