[tool.poetry]
name = "faebot-twitch"
version = "0.2.0"
description = "Faebot AI Chatbot for twitch with voice integration"
authors = ["transfaeries"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
twitchio = "^2.8.2"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
websockets = "^14.0"
numpy = "^2.0.0"
aiohttp = "^3.11.0"
jinja2 = "^3.1.0"
faster-whisper = "^1.0.0"
torch = "^2.0.0"
silero-vad = "^6.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
ipython = "^8.20.0"
flake8 = "^7.3.0"
mypy = "^1.19.1"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.1.0"
aioresponses = "^0.7.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = ["twitchio", "twitchio.*", "silero_vad", "faster_whisper"]
ignore_missing_imports = true